--- a/index.html
+++ b/index.html
@@ -128,21 +128,25 @@
                 </div>
 
                 </div>
-                <a href="#" class="special button">All set, let's play!</a>
+                <a id="lets-play" href="#" class="special button">All set, let's play!</a>
             </form>
           </div>
         </section>
 
-        <!-- Panel 7 - Game grid -->
-          <section id="game-grid" class="panel banner right">
-            <div class="filtered span-0-75 color4" data-position="25% 25%">
-            </div>
-            <div class="content color3 span-4-75">
-              <h1>Memory of memories</h1>
+        <!-- Panel 6 - Game grid -->
+          <section id="game-panel" class="panel banner right">
+            <div id="the-grid">
+              <div id="MofM" class="card cell-0-0"></div>
+              <div id="MofM" class="card cell-0-1"></div>
+              <div id="MofM" class="card cell-0-2"></div>
+
+              <div id="MofM" class="card cell-1-0"></div>
+              <div id="MofM" class="card cell-1-1"></div>
+              <div id="MofM" class="card cell-1-2"></div>
             </div>
           </section>
 
-        <!-- Panel 8 - Trivia -->
+        <!-- Panel 7 - Trivia -->
           <section id="travia-popup" class="panel color4-alt">
             <div class="intro color4">
               <h2 class="major">Let's get some more points!</h2>
@@ -157,7 +161,7 @@
             </div>
           </section>
 
-          <!-- Panel 9 -->
+          <!-- Panel 8 -->
           <section id="thanks-for-playing" class="panel color1">
             <div class="inner columns divided">
               <div class="span-2-25">
@@ -197,11 +201,12 @@
               </div>
           </section>
 
-          <!-- Panel 10--->
+          <!-- Panel 9--->
           <section id="contact" class="panel color1-alt">
             <div class="inner columns divided">
               <div class="span-3-25">
                 <h1 class="major">Thanks for playing!</h1>
+                <a href="#instructions-and-setup" class="button">Let's play again!</a>
               </div>
               <div class="span-1-3">
                 <ul class="contact-icons color1">
@@ -222,6 +227,7 @@
     <script src="ethereal-theme/assets/js/jquery.min.js"></script>
     <script src="ethereal-theme/assets/js/skel.min.js"></script>
     <script src="ethereal-theme/assets/js/main.js"></script>
+    <script src="ion-sound/ion.sound.min.js"></script>
     <script src="js/memory.js"></script>
     <script src="js/app.js"></script>
   </body>
