--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#instructions-and-setup" class="button">Skip intro, let's play!</a>
             </div>
             <div class="image filtered " data-position="top left">
-              <img src="photos/backdrops/south-beach.jpg" alt="" />
+              <img src="photos/backdrops/south-beach.jpeg" alt="" />
             </div>
           </section>
 
@@ -47,13 +47,13 @@
             <div class="gallery">
               <div class="group span-3">
                 <a href="photos/about-me-tiles/spain.jpg" class="image filtered span-3" data-position="bottom"><img src="photos/about-me-tiles/spain.jpg" alt="" /></a>
-                <a href="photos/about-me-tiles/pie1.jpg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie1.jpg" alt="" /></a>
+                <a href="photos/about-me-tiles/pie1.jpeg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie1.jpeg" alt="" /></a>
                 <a href="photos/about-me-tiles/painting-room.png" class="image filtered span-1-5" data-position="bottom"><img src="photos/about-me-tiles/painting-room.png" alt="" /></a>
               </div>
               <a href="photos/about-me-tiles/book-pins.jpg" class="image filtered span-2-5" data-position="top"><img src="photos/about-me-tiles/book-pins.jpg" alt="" /></a>
               <div class="group span-4-5">
                 <a href="photos/about-me-tiles/painting.png" class="image filtered span-3" data-position="top"><img src="photos/about-me-tiles/painting.png" alt="" /></a>
-                <a href="photos/about-me-tiles/pie2.jpg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie2.jpg" alt="" /></a>
+                <a href="photos/about-me-tiles/pie2.jpeg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie2.jpeg" alt="" /></a>
                 <a href="photos/about-me-tiles/jewelry.png" class="image filtered span-1-5" data-position="bottom"><img src="photos/about-me-tiles/jewelry.png" alt="" /></a>
                 <a href="photos/about-me-tiles/new-things.png" class="image filtered span-3" data-position="top"><img src="photos/about-me-tiles/new-things.png" alt="" /></a>
               </div>
