--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="intro joined">
               <h2 class="major">Instructions</h2>
               <ol>
-                <li><b>Set up the game the way you want to:</b> pick the difficulty level and wether or not you want the additional trivia questions.</li>
+                <li><b>Customize your game:</b> Add your players' names and pick the difficulty level .</li>
                 <li><b>Play it like a normal memory game:</b> Turn over any two cards. If the two cards match, keep them. If they don't match, turn them back over and try to remember their location!</li>
                 <li><b>Get additional points by answering the trivia question:</b>Once you have matched 2 photos, try guessing where the photo was taken!</li>
               </ol>
@@ -115,7 +115,7 @@
                   </div>
                 </div>
 
-                <div id="trivia" class="field">
+                <!-- <div id="trivia" class="field">
                   <label class="field third" for="demo-category">Would you like to add trivia questions for extra points?</label>
                   <div >
                     <input type="radio" id="demo-priority-low" name="demo-priority" class="color2"/>
@@ -125,7 +125,7 @@
                     <input type="radio" id="demo-priority-high" name="demo-priority" class="color2" />
                     <label for="demo-priority-high">No</label>
                   </div>
-                </div>
+                </div> -->
 
                 </div>
                 <a id="lets-play" href="#" class="special button">All set, let's play!</a>
@@ -207,6 +207,10 @@
               <div class="span-3-25">
                 <h1 class="major">Thanks for playing!</h1>
                 <a href="#instructions-and-setup" class="button">Let's play again!</a>
+                <br><br><br>
+                <h4>What people are saying...</h4>
+                <p><i>"This is the best thing ever!!"</i> - Alida C., my mom</p>
+                <p><i>"Meh..."</i> - Ariel D., Ironhack TA</p>
               </div>
               <div class="span-1-3">
                 <ul class="contact-icons color1">
