working points counter

--- a/grid.html
+++ b/grid.html
@@ -19,8 +19,11 @@
               <div class="card unmatched"></div>
               <div class="card unmatched"></div>
               <div class="card unmatched"></div>
-
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
             </div>
+            <h2>Current score:</h2>
+            <div id="counter"></div>
           </section>
 
       </div><!-- end Wrapper -->
