--- a/grid.html
+++ b/grid.html
@@ -22,9 +22,21 @@
               <div class="card unmatched"></div>
               <div class="card unmatched"></div>
             </div>
+          </section>
+          <section id="score-board">
             <h2>Current score:</h2>
             <div id="counter"></div>
           </section>
+          <section id="trivia-board">
+            <h2>Where was this photo taken?</h2>
+            <ul>
+              <li id="xchoice1"></li>
+              <li id="xchoice2"></li>
+              <li id="xchoice3"></li>
+            </ul>
+
+          </section>
+
 
       </div><!-- end Wrapper -->
     </div><!-- end Page Wrapper -->
