--- a/index.html
+++ b/index.html
@@ -67,8 +67,15 @@
               <h1 class="major">Presenting:<br>Memory of<br>Memories!</h1>
               <p><i>"The whimsical game for squares!"</i></p>
             </div>
-            <div class="image filtered tinted" data-position="top left">
+            <div class="image filtered tinted" data-position="center">
               <img src="photos/backdrops/lavender.jpg" alt="" />
+            </div>
+            <div id="challenges" class="intro color2">
+              <h2 class="major">Challenges<br> and mistakes</h2>
+              <ul>
+                <li>Self doubt & mental blocks</li>
+                <li>Going from written to coded</li>
+              </ul>
             </div>
           </section>
 
@@ -98,56 +105,60 @@
               <form method="post" action="#">
                 <div class="field">
                   <label for="demo-name">Names for score board</label>
-                  <input type="text" name="demo-name" id="demo-name-1" value="" placeholder="Darth Vader"/>
+                  <input type="text" name="demo-name" id="player-1-name" value="" placeholder="Darth Vader"/>
                   <br>
-                  <br>
-                  <input type="text" name="demo-name" id="demo-name-2" value="" placeholder="Luke Skywalker"/>
+                  <!-- <input type="text" name="demo-name" id="player-2-name" value="" placeholder="Luke Skywalker"/> -->
                 </div>
                 <div class="field">
-                  <label for="demo-category">Level of difficulty</label>
+                  <label for="difficulty">Level of difficulty</label>
                   <div class="select-wrapper">
-                    <select name="demo-category" id="demo-category">
+                    <select name="demo-category" id="difficulty">
                       <option value="">-</option>
-                      <option value="1">Easy like sunday morning (2 x 3 board)</option>
-                      <option value="1">Stuck in the middle with you (4 x 5 board)</option>
-                      <option value="1">Hit me with your best shot! (6 x 7 board)</option>
+                      <option value="easy">Easy like sunday morning</option>
+                      <option value="medium">Stuck in the middle with you</option>
+                      <option value="difficult">Hit me with your best shot!</option>
                     </select>
                   </div>
                 </div>
 
-                <!-- <div id="trivia" class="field">
-                  <label class="field third" for="demo-category">Would you like to add trivia questions for extra points?</label>
-                  <div >
-                    <input type="radio" id="demo-priority-low" name="demo-priority" class="color2"/>
-                    <label for="demo-priority-low">Yes</label>
-                  </div>
-                  <div class="field third">
-                    <input type="radio" id="demo-priority-high" name="demo-priority" class="color2" />
-                    <label for="demo-priority-high">No</label>
-                  </div>
-                </div> -->
-
                 </div>
-                <a id="lets-play" href="#" class="special button">All set, let's play!</a>
+                <a id="lets-play" href="#the-grid" class="special button">All set, let's play!</a>
             </form>
           </div>
         </section>
 
         <!-- Panel 6 - Game grid -->
           <section id="game-panel" class="panel banner right">
+            <div id="score-board" class="color0">
+              <h2>Current<br>score:</h2>
+              <h2 id="counter"></h2>
+            </div>
             <div id="the-grid">
-              <div id="MofM" class="card cell-0-0"></div>
-              <div id="MofM" class="card cell-0-1"></div>
-              <div id="MofM" class="card cell-0-2"></div>
-
-              <div id="MofM" class="card cell-1-0"></div>
-              <div id="MofM" class="card cell-1-1"></div>
-              <div id="MofM" class="card cell-1-2"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <!-- <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div>
+              <div class="card unmatched"></div> -->
             </div>
           </section>
 
         <!-- Panel 7 - Trivia -->
-          <section id="travia-popup" class="panel color4-alt">
+          <section id="trivia-popup" class="panel color4-alt">
             <div class="intro color4">
               <h2 class="major">Let's get some more points!</h2>
               <p>Where was this photo taken?</p>
@@ -162,10 +173,10 @@
           </section>
 
           <!-- Panel 8 -->
-          <section id="thanks-for-playing" class="panel color1">
+          <section id="woohoo-scores" class="panel color1">
             <div class="inner columns divided">
               <div class="span-2-25">
-                <h1 class="major">Woo hoo!!<br> You won, <span id="winner"> NAME </span>!</h1>
+                <h1 class="major">Woo hoo!!<br> You won, <span id="winner"></span>!</h1>
               </div>
               <div class="span-1-3">
                   <h3 class="major">Latest winners...</h3>
@@ -177,22 +188,10 @@
                           <th>Name</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody id="scores-board-content">
                         <tr>
-                          <td>Item One</td>
-                          <td>Ante turpis integer aliquet porttitor.</td>
-                        </tr>
-                        <tr>
-                          <td>Item Two</td>
-                          <td>Vis ac commodo adipiscing arcu aliquet.</td>
-                        </tr>
-                        <tr>
-                          <td>Item Three</td>
-                          <td> Morbi faucibus arcu accumsan lorem.</td>
-                        </tr>
-                        <tr>
-                          <td>Item Four</td>
-                          <td>Vitae integer tempus condimentum.</td>
+                          <td>200</td>
+                          <td>Mom</td>
                         </tr>
                       </tbody>
                     </table>
@@ -206,7 +205,7 @@
             <div class="inner columns divided">
               <div class="span-3-25">
                 <h1 class="major">Thanks for playing!</h1>
-                <a href="#instructions-and-setup" class="button">Let's play again!</a>
+                <a id="play-again" href="#instructions-and-setup" class="button">Let's play again!</a>
                 <br><br><br>
                 <h4>What people are saying...</h4>
                 <p><i>"This is the best thing ever!!"</i> - Alida C., my mom</p>
@@ -231,8 +230,8 @@
     <script src="ethereal-theme/assets/js/jquery.min.js"></script>
     <script src="ethereal-theme/assets/js/skel.min.js"></script>
     <script src="ethereal-theme/assets/js/main.js"></script>
-    <script src="ion-sound/ion.sound.min.js"></script>
-    <script src="js/memory.js"></script>
+    <!-- <script src="ion-sound/ion.sound.min.js"></script> -->
+    <script src="js/new-memory.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
