with trivia and edited text

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div id="challenges" class="intro color2">
               <h2 class="major">Challenges and mistakes as a newbie</h2>
               <ul>
-                <li>Self doubt and mental blocks</li>
-                <li>Going from mental model of logic to writen coded</li>
+                <li>Self doubt and mental blocks - being too hard on myself.</li>
+                <li>Going from written logic to written code.</li>
               </ul>
             </div>
           </section>
@@ -104,7 +104,7 @@
               <h3 class="major">Let's set up your game...</h3>
               <form method="post" action="#">
                 <div class="field">
-                  <label for="demo-name">Names for score board</label>
+                  <label for="demo-name">Name for score board</label>
                   <input type="text" name="demo-name" id="player-1-name" value="" placeholder="Darth Vader"/>
                   <br>
                   <!-- <input type="text" name="demo-name" id="player-2-name" value="" placeholder="Luke Skywalker"/> -->
