--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
         <!-- Panel 3 - photo collage -->
           <section id="photo-collage" class="panel">
-            <div class="intro color2">
-              <p>I love spreadsheets and organizational structures, but also have a very strong creative side... Which has made me interested in everything, but expert at nothing.</p>
-              <h2 class="major">I'm doing a bootcamp in hopes of finding a career that will marry my two brains :)</h2>
+            <div class="intro color4">
+              <h2 class="major">I love traveling and making stuff!</h2>
             </div>
             <div class="gallery">
               <div class="group span-3">
@@ -57,7 +56,10 @@
                 <a href="photos/about-me-tiles/jewelry.png" class="image filtered span-1-5" data-position="bottom"><img src="photos/about-me-tiles/jewelry.png" alt="" /></a>
                 <a href="photos/about-me-tiles/new-things.png" class="image filtered span-3" data-position="top"><img src="photos/about-me-tiles/new-things.png" alt="" /></a>
               </div>
-              <!-- <a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a> -->
+            </div>
+            <div class="intro color2">
+              <p>I love spreadsheets and organizational structures, but also have a very strong creative side as you can see... Which has made me interested in everything, but expert at nothing.</p>
+              <h2 class="major">I'm doing a bootcamp in hopes of finding a career that will marry my two brains :)</h2>
             </div>
           </section>
 
