trivia pop up working, refactored sizeofboard

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <section id="welcome" class="panel spotlight medium right">
             <div class="content span-9">
               <h1 class="major"></h1>
-              <h1 class="major">Welcome to my game!</h1>
-              <p><b>Scroll right to learn about me and the game or...</b></p>
+                <h1 class="major">Welcome!</h1>
+              <p><b>Scroll right to learn about me and my first ever coding project or...</b></p>
               <a href="#instructions-and-setup" class="button">Skip intro, let's play!</a>
             </div>
-            <div class="image filtered " data-position="top left">
+            <div class="image" data-position="top left">
               <img src="photos/backdrops/south-beach.jpeg" alt="" />
             </div>
           </section>
@@ -31,7 +31,7 @@
             <div class="content color0 span-3-75">
               <h1 class="major">Hello, my name<br />
               is Alida</h1>
-              <p>I was born and raised in Lima, Peru... and couldn't wait to leave.<br><br>At 18 I moved to NYC where I went to school for fashion, stayed up too late, learned to play pool, and became an adult.<br><br>I worked a bunch of odd jobs until I stumbled onto the magical world of startups... and I've been hooked ever since <3</p>
+              <p>I was born and raised in Lima, Peru... and left to chase adventures as soon as I could.<br><br>At 18 I moved to NYC where I went to school for fashion, stayed up too late, learned to play pool, and became an adult.<br><br>I worked a bunch of odd jobs until I stumbled onto the magical world of startups... and I've been hooked ever since <3</p>
             </div>
             <div class="image filtered span-1-75" data-position="25% 25%">
               <img src="photos/me/me.jpg" alt="" />
@@ -41,25 +41,25 @@
         <!-- Panel 3 - photo collage -->
           <section id="photo-collage" class="panel">
             <div class="intro color4">
-              <h2 class="major">I love traveling and making stuff!</h2>
+              <h2 class="major">Exploring and making are two<br>of my biggest motivators</h2>
             </div>
             <div class="gallery">
               <div class="group span-3">
                 <a href="photos/about-me-tiles/spain.jpg" class="image filtered span-3" data-position="bottom"><img src="photos/about-me-tiles/spain.jpg" alt="" /></a>
-                <a href="photos/about-me-tiles/pie1.jpeg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie1.jpeg" alt="" /></a>
+                <a href="photos/about-me-tiles/pie1.jpg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie1.jpg" alt="" /></a>
                 <a href="photos/about-me-tiles/painting-room.png" class="image filtered span-1-5" data-position="bottom"><img src="photos/about-me-tiles/painting-room.png" alt="" /></a>
               </div>
               <a href="photos/about-me-tiles/book-pins.jpg" class="image filtered span-2-5" data-position="top"><img src="photos/about-me-tiles/book-pins.jpg" alt="" /></a>
               <div class="group span-4-5">
                 <a href="photos/about-me-tiles/painting.png" class="image filtered span-3" data-position="top"><img src="photos/about-me-tiles/painting.png" alt="" /></a>
-                <a href="photos/about-me-tiles/pie2.jpeg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie2.jpeg" alt="" /></a>
+                <a href="photos/about-me-tiles/pie2.jpg" class="image filtered span-1-5" data-position="center"><img src="photos/about-me-tiles/pie2.jpg" alt="" /></a>
                 <a href="photos/about-me-tiles/jewelry.png" class="image filtered span-1-5" data-position="bottom"><img src="photos/about-me-tiles/jewelry.png" alt="" /></a>
                 <a href="photos/about-me-tiles/new-things.png" class="image filtered span-3" data-position="top"><img src="photos/about-me-tiles/new-things.png" alt="" /></a>
               </div>
             </div>
             <div class="intro color2">
-              <p>I love spreadsheets and organizational structures, but also have a very strong creative side as you can see... Which has made me interested in everything, but expert at nothing.</p>
-              <h2 class="major">I'm doing a bootcamp in hopes of finding a career that will marry my two brains :)</h2>
+              <p>I'm 48% left brain <br>and 52% right brain.</p>
+              <h2 class="major">I'm doing a coding bootcamp in hopes of finding a career that will marry my two brains :)</h2>
             </div>
           </section>
 
@@ -69,13 +69,13 @@
               <h1 class="major">Presenting:<br>Memory of<br>Memories!</h1>
               <p><i>"The whimsical game for squares!"</i></p>
             </div>
-            <div class="image filtered tinted" data-position="center">
+            <div class="image filtered " data-position="center">
               <img src="photos/backdrops/lavender.jpg" alt="" />
             </div>
             <div id="challenges" class="intro color2">
-              <h2 class="major">Challenges and mistakes as a newbie</h2>
+              <h2 class="major">Challenges and mistakes as a coding newbie</h2>
               <ul>
-                <li>Self doubt and mental blocks - being too hard on myself.</li>
+                <li>Self doubt and mental blocks - being too hard on myself... It's only been two weeks!</li>
                 <li>Going from written logic to written code.</li>
               </ul>
             </div>
@@ -99,8 +99,7 @@
               </ul>
             </div>
 
-        <!--  game settings -->
-
+        <!--  5.5 game settings -->
           <div id="game-setup" class="content span-10">
             <div>
               <h3 class="major">Let's set up your game...</h3>
@@ -109,7 +108,6 @@
                   <label for="demo-name">Name for score board</label>
                   <input type="text" name="demo-name" id="player-1-name" value="" placeholder="Darth Vader"/>
                   <br>
-                  <!-- <input type="text" name="demo-name" id="player-2-name" value="" placeholder="Luke Skywalker"/> -->
                 </div>
                 <div class="field">
                   <label for="difficulty">Level of difficulty</label>
@@ -131,39 +129,31 @@
 
         <!-- Panel 6 - Game grid -->
           <section id="game-panel" class="panel banner right">
-            <div id="score-board" class="color0">
+            <div id="score-board" class="color2">
               <h2>Current<br>score:</h2>
               <h2 id="counter"></h2>
             </div>
             <div id="the-grid">
-              <div class="card unmatched"></div>
-              <div class="card unmatched"></div>
-              <div class="card unmatched"></div>
-              <div class="card unmatched"></div>
-              <div class="card unmatched"></div>
-              <div class="card unmatched"></div>
             </div>
+            <!-- Panel 6.5 - Trivia -->
+            <section id="trivia-popup" class="color4-alt">
+              <div id="trivia-questions" class="intro color4">
+                <h2 class="major">That's a match!</h2>
+                <p>Where was this photo taken?</p>
+                <ul class="actions">
+                  <li><button id="triviaButton1" class="trivia-button button special large" type="button" name="button"></button></li>
+                  <br><br>
+                  <li><button id="triviaButton2" class="trivia-button button special large" type="button" name="button"></button></li>
+                  <br><br>
+                  <li><button id="triviaButton3" class="trivia-button button special large" type="button" name="button"></button></li>
+                </ul>
+                <p id="incorrect-trivia-answer">Sorry! Try again next time!</p>
+                <p id="correct-trivia-answer">Yes it was! +25 points!</p>
+              </div>
+            </section>
           </section>
 
-        <!-- Panel 7 - Trivia -->
-          <section id="trivia-popup" class="panel color4-alt">
-            <div class="intro color4">
-              <h2 class="major">Let's get some more points!</h2>
-              <p>Where was this photo taken?</p>
-              <ul class="actions">
-                <li><button id="triviaButton1" class="trivia-button button special large" type="button" name="button"></button></li>
-                <br><br>
-                <li><button id="triviaButton2" class="trivia-button button special large" type="button" name="button"></button></li>
-                <br><br>
-                <li><button id="triviaButton3" class="trivia-button button special large" type="button" name="button"></button></li>
-              </ul>
-              <p id="incorrect-trivia-answer">Sorry! Try again next time!</p>
-              <p id="correct-trivia-answer">Yes it was! +25 points!</p>
-            </div>
-
-          </section>
-
-          <!-- Panel 8 -->
+          <!-- Panel 7 -->
           <section id="woohoo-scores" class="panel color2">
             <div class="inner columns divided">
               <div class="span-2-25">
@@ -195,7 +185,7 @@
               </div>
           </section>
 
-          <!-- Panel 9--->
+          <!-- Panel 8 --->
           <section id="contact" class="panel color1-alt">
             <div class="inner columns divided">
               <div class="span-3-25">
@@ -217,7 +207,6 @@
               </div>
             </div>
           </section>
-
 
       </div><!-- end Wrapper -->
     </div><!-- end Page Wrapper -->
