final game for presentation

--- a/index-test.html
+++ b/index-test.html
@@ -216,7 +216,7 @@
     <script src="ethereal-theme/assets/js/skel.min.js"></script>
     <script src="ethereal-theme/assets/js/main.js"></script>
     <!-- <script src="ion-sound/ion.sound.min.js"></script> -->
-    <script src="js/memory.js"></script>
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/memory-test.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
