--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <script src="ethereal-theme/assets/js/jquery.min.js"></script>
     <script src="ethereal-theme/assets/js/skel.min.js"></script>
     <script src="ethereal-theme/assets/js/main.js"></script>
-    <!-- <script src="ion-sound/ion.sound.min.js"></script> -->
+    <script src="ion.sound/ion.sound.min.js"></script>
     <script src="js/memory.js"></script>
     <!-- <script src="js/app.js"></script> -->
   </body>
