--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="intro joined">
               <h2 class="major">Instructions</h2>
               <ol>
-                <li><b>Customize your game:</b> Add your players' names and pick the difficulty level .</li>
+                <li><b>Customize your game:</b> Add your name for the score board and pick the difficulty level .</li>
                 <li><b>Play it like a normal memory game:</b> Turn over any two cards. If the two cards match, you keep 'em! If they don't match, try to remember their location because they'll turn back quickly!</li>
-                <li><b>Get additional points by answering the trivia questions:</b> Once you have matched 2 photos, try guessing where they were taken!</li>
+                <li><b>Get additional points by answering trivia questions:</b> Once you have matched 2 photos, try guessing where they were taken!</li>
               </ol>
             </div>
             <div class="inner">
@@ -106,7 +106,7 @@
               <h3 class="major">Let's set up your game...</h3>
               <form method="post" action="#">
                 <div class="field">
-                  <label for="demo-name">Name for score board</label>
+                  <label for="demo-name">Your name</label>
                   <input type="text" name="demo-name" id="player-1-name" value="" placeholder="Darth Vader"/>
                   <br>
                 </div>
@@ -158,7 +158,8 @@
           <section id="woohoo-scores" class="panel color2">
             <div class="inner columns divided">
               <div class="span-2-25">
-                <h1 class="major">Woo hoo!<br> Congrats, <span id="winner"></span>!</h1>
+                <h1 class="major">Woo hoo!</h1>
+                <h2>Congrats, <span id="winner"></span>!</h2>
               </div>
               <div class="span-1-3">
                   <h3 class="major">Latest winners...</h3>
